--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc && vite build",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "deploy": "gh-pages -d dist"
+        "deploy": "gh-pages -d dist -r https://github.com/mgalvizo/bmi-calculator.git"
     },
     "dependencies": {
         "@types/styled-components": "^5.1.26",
